--- a/res/layout/add_job_layout.xml
+++ b/res/layout/add_job_layout.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingTop="@dimen/activity_vertical_margin" 
+    tools:context=".Add_job">
 
     <TableRow
         android:id="@+id/tableRow1"
@@ -133,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-             android:onClick="clearForm"
+             android:id="@+id/clearFormButton"
             android:text="@string/button_clear" />
             
     </TableRow>
