--- a/res/layout/joblistview_row.xml
+++ b/res/layout/joblistview_row.xml
@@ -3,7 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal" >
-    
+<!-- 
+    <TimePicker
+        android:id="@+id/timePicker1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+     -->
     <TextView 
         android:id="@+id/txtName"
         android:layout_width="fill_parent"
@@ -11,6 +16,7 @@
         android:gravity="center_vertical"
         android:layout_alignParentTop="True"
         android:layout_alignParentBottom="True"
+        android:textSize="30dp"
         />
     
 
