--- a/res/menu/jobs.xml
+++ b/res/menu/jobs.xml
@@ -2,11 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/joblistView"
         android:showAsAction="never"
-        android:title="@string/app_name"/>
-    
+        />
+    <!-- android:orderInCategory="100" -->
 
     
 
